<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="0dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="0dp"
    app:contentPadding="1dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/imageViewBg"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="1:1"
                android:foreground="@drawable/black_shadow"
                android:scaleType="centerCrop"
                tools:srcCompat="@tools:sample/backgrounds/scenic"
                tools:ignore="ContentDescription,MissingConstraints" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textViewRecipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ellipsize="end"
            android:lines="2"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="3"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textStyle="bold"
            tools:text="Churrasco"
            android:layout_gravity="bottom"/>

        <ImageButton
            android:id="@+id/btnFav"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="top|end"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:background="@drawable/ic_baseline_favorite_border_24"
            android:tag="@drawable/ic_baseline_favorite_border_24"
            android:baselineAlignBottom="false"
            android:clickable="false"
            android:contextClickable="false"
            android:focusable="false"
            android:foreground="@android:color/transparent"
            android:longClickable="false"
            tools:ignore="ContentDescription" />

    </FrameLayout>

</androidx.cardview.widget.CardView>